# Vishap

./: CMakeLists.txt  README.md
include/vishap/Passes/: TosaValueProfilerPass.h
lib/: CMakeLists.txt
lib/Passes/: TosaValueProfilerPass.cpp
scripts/: iree_run.sh  run.py
tests/value_profiler/: q_slp0.mlir  resnet50.iree.elided.mlir  slp0.mlir  t0.mlir
tools/: CMakeLists.txt
tools/vishap-opt/: CMakeLists.txt  vishap-opt.cpp
